--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -11,7 +11,8 @@
 </header>
         <!--BANNER HOME-->
         <div class="banner-home">
-        <img src="/img/banner.png" alt="Banner Vraiklat">
+        <!-- <img src="/img/banner.png" alt="Banner Vraiklat"> -->
+        <%- include('./partials/slider.ejs') %>
         </div>
         
         
@@ -64,9 +65,9 @@
                     <div class="info-producto">
                         <div class="descripcion">Barra de chocolate</div>
                     </div>
-                    <div class="icon-preguntas"> 
+                    <!-- <div class="icon-preguntas"> 
                         <img src="/img/iconos/cart.png" alt="carrito" class="cart-icono">
-                    </div> 
+                    </div>  -->
                     
                     
                     <!-- <div class="truck"><i class="fa-solid fa-truck"></i></div> ICONO CARRITO --> 
@@ -83,9 +84,7 @@
                     <div class="info-producto">  
                         <div class="descripcion">Chocolate </div>
                     </div>
-                    <div class="icon-preguntas"> 
-                        <img src="/img/iconos/cart.png" alt="carrito" class="cart-icono">
-                    </div> 
+                    
             
                     
                 </article>
@@ -98,9 +97,7 @@
                     <div class="info-producto">                     
                         <div class="descripcion">Helado ddl</div>
                     </div> 
-                    <div class="icon-preguntas"> 
-                        <img src="/img/iconos/cart.png" alt="carrito" class="cart-icono">
-                    </div> 
+                
                     
                     
                 </article>
@@ -113,9 +110,7 @@
                     <div class="info-producto">
                         <div class="descripcion">Copa helado</div>
                     </div>    
-                    <div class="icon-preguntas"> 
-                        <img src="/img/iconos/cart.png" alt="carrito" class="cart-icono">
-                    </div>             
+                                
                     
                 </article>
                 <article>
@@ -126,9 +121,6 @@
                     <%}%>  
                     <div class="info-producto">
                         <div class="descripcion">Tableta mil hojas</div>
-                    </div>       
-                    <div class="icon-preguntas"> 
-                        <img src="/img/iconos/cart.png" alt="carrito" class="cart-icono">
                     </div>           
 
                 </article>
@@ -141,10 +133,6 @@
                     <div class="info-producto">
                         <div class="descripcion">Tableta</div>
                     </div>        
-                    <div class="icon-preguntas"> 
-                        <img src="/img/iconos/cart.png" alt="carrito" class="cart-icono">
-                    </div>           
-                    
 
                 </article>
         </section>
