--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -18,7 +18,7 @@
   </div>
 
   <div>
-    <h4 class="footer">Términos y condiciones</h4>
+    <h4 class="footer">Términos y Condiciones</h4>
     <div class="icon-term&cond">
       <img src="/img/iconos/terms-and-conditions.png" alt="terms-and-conditionsclass" class="terms-and-conditions-icono">
       <!-- <i class="fas fa-file-contract"></i> -->
