--- a/src/views/users/login.ejs
+++ b/src/views/users/login.ejs
@@ -48,7 +48,11 @@
             <%}else{%>
                 <h1> B</h1>
             <%}%>-->
-            
+<!--             
+            <label for="" class="label-recordame">Recordame</label> <br>
+            <input type="checkbox" name="recordame" class="input-recordame"> <br>
+            -->
+
 
             <div class="boton-login">
                 <button type="submit" class="button-login">Enviar</button>
