--- a/public/css/listProductsAdmin.css
+++ b/public/css/listProductsAdmin.css
@@ -1,4 +1,3 @@
-
 .grilla{
     display: grid;
     grid-template-columns: repeat(auto-fill,minmax(200px,1fr));
@@ -15,7 +14,6 @@
 
 a.hiper-fotos{
     display: block;
-    
 }
 
 a.boton-edit{
@@ -24,6 +22,8 @@ a.boton-edit{
 
 a.hiper-edit{
     display: block;
+    color:#000000;
+    font-size: 30px;
 }
 
 .botones-grilla{
@@ -42,6 +42,12 @@ a.hiper-edit{
 
 .info-producto-grilla{
     text-align: center;
+    font-size: 1.1em;
+    font-weight: 600;
+}
+
+div.precios-grilla{
+    margin-bottom: 15px;
 }
 
 .descripcion-grilla{
@@ -49,9 +55,21 @@ a.hiper-edit{
     color: black;
 }
 
-.truck-grilla{
+.borrar-producto-usuariouck-grilla{
     color: black;
 }
+
+main.listProductsAdmin{
+    background-color: #d9ad77;
+    margin: 0 auto;
+    text-align: center;
+    width: 100%;
+}
+
+/* a.btn-panel{
+    display: block;
+    color: #6f4b39;
+} */
 
 /* main section div.grilla article img:hover{
     box-shadow: 0px 0px 50px rgb(230, 0, 0);
@@ -67,17 +85,17 @@ button.borrar-producto-usuario{
     line-height: normal;
     overflow: visible;
     padding: 0;
-    
+    color: #730e16;
+    font-size: 30px;
 }
 
 button.crear-producto-usuario{
     width: 200px;
     margin-top: 15px;   
-    border: 2px solid #730e16
-}
-
-.id-producto{
-        display: none;
+    border: 2px solid #730e16;
+    padding:0.6em 2em;
+    border-radius: 8px;
+    font-size: 1.1em;
 }
 
 @media (min-width:500px) {
