--- a/src/views/users/listUsers.ejs
+++ b/src/views/users/listUsers.ejs
@@ -29,7 +29,7 @@
                         <div class="precios-grilla"><%= users[i].telefono %></div>
                         <div class="precios-grilla"><%= users[i].ciudad %></div>
                         <form action="/users/<%= users[i].id %>?_method=DELETE" method="POST"><button type="submit">Borrar</button></form>
-                        <a href="/users/<%= users[i].id%>/edit" class="boton-edit"><i class="fa-solid fa-pen-to-square"></i></a>
+                        <a href="/users/<%= users[i].id_usuario%>/edit" class="boton-edit"><i class="fa-solid fa-pen-to-square"></i></a>
                         </div>
                 </article>
                 <%}%>
